--- a/L1.3-programming-basics.Rmd
+++ b/L1.3-programming-basics.Rmd
@@ -3,12 +3,10 @@ title: "Getting Started"
 output: html_document
 ---
 
-```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
-
-[Note: Some content in this page is sourced from other courses - citations are in the footnotes]^[Some content in this page is sourced from: 1) Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html); 2) Jenny Bryan's [STAT 545 Course](http://stat545.com/); 3) [RStudio primers](https://rstudio.cloud/learn/primers/1.2); 4) Xiao Ping Song's [Intro2R crash course](https://github.com/xp-song/Intro2R)]
 
 ---
 
@@ -356,7 +354,7 @@ install.packages("wikifacts") # Remember - you only have to do this once!
 Now that you have the package installed on your computer, try loading it using `library(wikifacts)`, then trying using some of it's functions:
 
 ```{r}
-library(wikifacts) # Load the library 
+library(wikifacts) # Load the library
 wiki_randomfact()
 wiki_didyouknow()
 ```
@@ -365,4 +363,23 @@ In case you're wondering, the only thing this package does is generate messages 
 
 ---
 
+# Page sources
+
+Some content on this page has been modified from other courses, including:
+
+- Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html)
+- Jenny Bryan's [STAT 545 Course](http://stat545.com/)
+- [RStudio primers](https://rstudio.cloud/learn/primers/1.2)
+- Xiao Ping Song's [Intro2R crash course](https://github.com/xp-song/Intro2R)
+
+---
+
 **Footnotes**
+
+
+
+
+
+
+
+
