--- a/index.Rmd
+++ b/index.Rmd
@@ -6,9 +6,9 @@ output:
     toc: no
 ---
 
-```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
 
 ### The George Washington University
