--- a/P10-data-vizualizations.Rmd
+++ b/P10-data-vizualizations.Rmd
@@ -3,8 +3,7 @@ title: "Practice 10 - Data Vizualizations"
 output: html_document
 ---
 
-<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
- -->
