--- a/P3-functions.Rmd
+++ b/P3-functions.Rmd
@@ -3,8 +3,20 @@ title: "Practice 3 - Functions"
 output: html_document
 ---
 
-<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
- -->
+
+Read these instructions first!
+You may not use loops or conditionals (which we haven't covered yet).
+
+---
+
+---
+
+# Page sources
+
+Some content on this page has been modified from other courses, including:
+
+- CMU [15-112: Fundamentals of Programming](http://www.kosbie.net/cmu/spring-13/15-112/)
