--- a/P5-loops.Rmd
+++ b/P5-loops.Rmd
@@ -3,8 +3,16 @@ title: "Practice 5 - Loops"
 output: html_document
 ---
 
-<!-- ```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
- -->
+
+---
+
+# Page sources
+
+Some content on this page has been modified from other courses, including:
+
+- CMU [15-112: Fundamentals of Programming](http://www.kosbie.net/cmu/spring-17/15-112/), by [David Kosbie](http://www.kosbie.net/cmu/) & [Kelly Rivers](https://hcii.cmu.edu/people/kelly-rivers)
+- Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html)
