--- a/resources.Rmd
+++ b/resources.Rmd
@@ -3,9 +3,9 @@ title: "Resources"
 output: html_document
 ---
 
-```{r settings, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=objects()) # start with a clean workspace
-source("knitr_settings.R")
+source("knitr_setup.R")
 ```
 
 ---
