--- a/L1.2-getting-started.Rmd
+++ b/L1.2-getting-started.Rmd
@@ -251,7 +251,7 @@ I can also run any line in the script by typing "Command + Enter" (Mac) or "Cont
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
