--- a/L11.1-data-frames.Rmd
+++ b/L11.1-data-frames.Rmd
@@ -12,7 +12,7 @@ source("knitr_setup.R")
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
