--- a/L14.1-monte-carlo-methods.Rmd
+++ b/L14.1-monte-carlo-methods.Rmd
@@ -12,7 +12,7 @@ source("knitr_setup.R")
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
