--- a/L3.1-functions.Rmd
+++ b/L3.1-functions.Rmd
@@ -237,7 +237,7 @@ printN()
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
