--- a/L4.1-conditionals.Rmd
+++ b/L4.1-conditionals.Rmd
@@ -12,7 +12,7 @@ source("knitr_setup.R")
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
