--- a/L7.2-sorting.Rmd
+++ b/L7.2-sorting.Rmd
@@ -12,7 +12,7 @@ source("knitr_setup.R")
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
