--- a/P11-monte-carlo-methods.Rmd
+++ b/P11-monte-carlo-methods.Rmd
@@ -10,7 +10,7 @@ source("knitr_setup.R")
 
 ---
 
-# Page sources
+**Page sources**:
 
 Some content on this page has been modified from other courses, including:
 
