--- a/hw2-functions.Rmd
+++ b/hw2-functions.Rmd
@@ -1,5 +1,83 @@
 ---
 title: "Homework 2 - Functions"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
+
+**Due**: Sunday, 22-Sept. at 8pm
+
+**Instructions**:
+
+1) Start by downloading [this file](https://github.com/emse6574-gwu/2019-Fall/raw/gh-pages/hw/hw1.R).
+2) Edit that file, and submit it on Blackboard.
+
+**Rules**:
+
+- This entire homework is **COLLABORATIVE**. You may work in groups of up to 3 students who are in this course this semester (and then with nobody else except the course instructors). You may not split up the work -- everyone must work on every problem. And you may not simply copy any code but rather truly work together.
+- Even though you work collaboratively, you still must submit your own solutions.
+- You may not use loops or conditionals (which we've not covered yet).
+
+---
+
+**Assignment**:
+
+Write the code for each of the following functions.
+
+### 1) `kthDigit(x, k)`
+
+Given two integers, `x` and `k`, return the kth digit of `x`, counting from the right. So:
+
+- `kthDigit(789, 0)` returns `9`
+- `kthDigit(789, 1)` returns `8`
+- `kthDigit(789, 2)` returns `7`
+- `kthDigit(789, 3)` returns `0`
+
+Negative numbers should work, too, so `kthDigit(-789, 0)` returns `9`.
+
+### 2) `getTheCents(n)`
+
+Write the function `getTheCents(n)` which takes a value `n` (which represents a payment in US dollars) and returns the number of cents in the payment. For example, if n is 2.45, the function should return 45. If n is an integer, the function should return 0, as it has 0 cents; if it isn't a number, it should return `NULL`, because a non-number payment make no cents (ha!). If the payment has partial cents (for example, 3.953), it should be rounded up to the nearest cent (in this example, 96 cents).
+
+### 3) `numberOfPoolBalls(rows)`
+
+![](images/poolballs.jpg){ width=150 }
+
+Pool balls are arranged in rows where the first row contains 1 pool ball and each row contains 1 more pool ball than the previous row. Thus, if there are 3 rows, then we'd have 6 total pool balls (1+2+3). Write a function that takes an integer value (the number of rows) and returns another integer value (the number of pool balls in that number of rows). For example, `numberOfPoolBalls(3)` returns `6`. Do not use loops.
+
+### 4) `numberOfPoolBallRows(balls)`
+
+This problem is the inverse of the previous problem. In this case, return the number of rows required for the given number of pool balls. Thus, `numberOfPoolBallRows(6)` returns `3`. Note that if any balls must be in a row, then you count that row, and so `numberOfPoolBallRows(7)` returns `4` (since the 4th row must have a single ball in it).
+
+### 5) `isEvenPositiveInt(x)`
+
+Given an arbitrary value `x`, return `TRUE` if it is an integer, and it is positive, and it is even (all 3 must be true), or `FALSE` otherwise. Do not crash if the value is not an integer. So, `isEvenPositiveInt("yikes!")` returns `FALSE` (rather than crashing), and `isEvenPositiveInt(123456)` returns `TRUE`.
+
+### 6) `isPerfectCube(x)`
+
+Given an integer value `x`, returns `TRUE` if it is a perfect cube and `FALSE` otherwise. That is, return `TRUE` if there is another integer `y` such that `x = y^3`.  Thus, `isPerfectCube(27)` returns `TRUE`, but `isPerfectCube(16)` returns `FALSE`.
+
+### 7) `isTriangular(x)`
+
+A number is triangular if it equals 1+2+3+...+N for some integer N. Given an integer value `x`, return `TRUE` if it is triangular, and `FALSE` otherwise.  Note that this relates to the pool ball problems above.
+
+### 8) `fabricYards(inches)`
+
+Fabric must be purchased in whole yards. Write a function that takes a non-negative number of inches of fabric desired, and returns the smallest number of whole yards of fabric that must be purchased.  Thus, `fabricYards(1)` is `1` (you need a full yard if you buy one inch) and `fabricYards(36)` is also `1`, but `fabricYards(37)` is `2`.
+
+### 9) `fabricExcess(inches)`
+
+Write a function that takes a non-negative number of inches of fabric desired and returns the number of inches of excess fabric that must be purchased (as purchases must be in whole yards). Thus, since you need a whole yard when you buy 1 inch, `fabricExcess(1)` is `35`. Similarly, `fabricExcess(36)` is `0`, and `fabricExcess(37)` is `35`.
+
+Hint: there are (at least) two good ways to write this. One way involves a simple expression using one of the math operators we have learned. The other way uses `fabricYards(inches)` (which you just wrote!).
+
+---
+
+**Page sources**:
+
+Some content on this page has been modified from other courses, including:
+
+- CMU [15-112: Fundamentals of Programming](http://www.kosbie.net/cmu/spring-13/15-112/handouts/hw1.html)
+
 
