--- a/syllabus_emse6574.Rmd
+++ b/syllabus_emse6574.Rmd
@@ -26,7 +26,7 @@ source("knitr_setup.R")
 
 ---
 
-# References
+**Sources**:
 
 Some content on this page has been modified from other courses, including:
 
