--- a/L1.2-getting-started.Rmd
+++ b/L1.2-getting-started.Rmd
@@ -62,36 +62,42 @@ Go into the Console on the left with the `>` (that's the *command prompt*), and 
 
 # R as a calculator
 
-## Operators
+At its core, R is a calculator. You can use arithmetic, relational, and logical operators to evaluate a wide variety of computations.
 
-R handles the four basic arithmetic operators using these symbols:
+## Arithmetic operators
+
+R can handle simple arithmetic using the following arithmetic operators:
 
 - Addition: `+`
 - Subtraction: `-`
 - Multiplication: `*`
 - Division: `/`
-
-For example, try typing `r 10 + 20`, then hit enter. You should see this:
-
-```{r}
-10 + 20
-```
-
-Not a lot of surprises (for now, ignore the `[1]` you see...we'll get to that).
-
-R also supports three other useful arithmetic operators:
-
 - Powers: `^`
 - Integer division: `%/%`
 - Modulus: `%%`
 
-**Powers** (i.e. $x$ raised to the power of $n$) are represented using the `^` symbol. For example, to calculate $5^4$ in R, we would type:
+The first four basic operators (`+`, `-`, `*`, `/`) are pretty straightforward and behave as expected:
+
+```{r}
+7 + 5 # Addition
+7 - 5 # Subtraction
+7 * 5 # Multiplication
+7 / 5 # Division
+```
+
+Not a lot of surprises (you can ignore the `[1]` you see in the returned values...that's just R saying there's only one value to return). The other three arithmetic operators (`^`, `%/%`, `%%`) are a little more subtle, so let's examine them more closely.
+
+**Powers**:
+
+Powers (i.e. $x^n$) are represented using the `^` symbol. For example, to calculate $5^4$ in R, we would type:
 
 ```{r}
 5^4
 ```
 
-**Integer** division is division in which the fractional part (remainder) is discarded. Note the difference between regular (`/`) and integer (`%/%`) division:
+**Integer division**:
+
+Integer division is division in which the fractional part (remainder) is discarded. Note the difference between regular (`/`) and integer (`%/%`) division:
 
 ```{r}
 4 / 3 # Regular division
@@ -103,13 +109,130 @@ R also supports three other useful arithmetic operators:
 
 With integer division, 3 can only go into 4 once, so `4 %/% 3` returns `1`.
 
-Finally, the **modulus** (aka "mod" operator) simply returns the remainder after doing regular division. For example:
+**Modulus operator**:
+
+The **modulus** (aka "mod" operator) simply returns the remainder after doing regular division. For example:
 
 ```{r}
 17 %% 3
 ```
 
 returns `2` because because 17 / 3 is equal to 5 with a remainder of 2.
+
+## Relational operators
+
+R assesses whether a comparison of two values is `TRUE` or `FALSE` using the following relational operators:
+
+- Less than: `<`
+- Less than or equal to : `<=`
+- Greater than or equal to: `>=`
+- Greater than: `>`
+- Equal: `==`
+- Not equal: `!=`
+
+The *less than* operator `<` can be used to test whether one number is smaller than another number:
+
+```{r}
+2 < 5
+```
+
+If the two values are equal, the `<` operator will return `FALSE`, while the `<=` operator will return `TRUE`: :
+
+```{r}
+2 < 2
+2 <= 2
+```
+
+The "greater than" (`>`) and "greater than or equal to" (`>=`) operators work the same way but in reverse:
+
+```{r}
+2 > 5
+2 > 2
+2 >= 2
+```
+
+To assess whether two values are equal, we have to use a double equal sign (`==`):
+
+```{r}
+(2 + 2) == 4
+(2 + 2) == 5
+```
+
+To assess whether two values are _not_ equal, we have to use an exclamation point sign with an equal sign (`!=`):
+
+```{r}
+(2 + 2) != 4
+(2 + 2) != 5
+```
+
+It's worth noting that you can also apply equality operations to strings. R understands that a `"penguin"` is a `"penguin"` so you get this:
+
+```{r}
+"penguin" == "penguin"
+```
+
+However, R is very particular about what counts as equality. For two pieces of text to be equal, they must be _precisely_ the same:
+
+```{r, results='hold'}
+"penguin" == "PENGUIN"        # Returns FALSE
+"penguin" == "p e n g u i n"  # Returns FALSE
+"penguin" == "penguin "       # Returns FALSE
+```
+
+## Logical operators
+
+R assesses logical statements using the following logical operators:
+
+- And: `&`
+- Or: `|`
+- Not: `!`
+
+**And**:
+
+A logical expression `x & y` is `TRUE` only if *both* `x` and `y` are `TRUE`.
+
+```{r}
+x <- (2 == 2)
+y <- (2 == 3)
+x & y
+```
+```{r}
+x <- (2 == 2)
+y <- (2 == 2)
+x & y
+```
+
+**Or**:
+
+A logical expression `x | y` is `TRUE` if *either* `x` or `y` are `TRUE`.
+
+```{r}
+x <- (2 == 2)
+y <- (2 == 3)
+x | y
+```
+
+**Not**:
+
+The `!` operator behaves like the word *"not"* in everyday language. If a statement is "not true", then it must be "false". For example:
+
+```{r}
+!TRUE
+```
+
+In practice, it is often helpful to include parentheses to clarify the statement being made. Consider the following example:
+
+```{r}
+!3 == 5
+```
+
+This returns `TRUE`, but it's a bit confusing. Reading from left to right, you start by saying "not 3"...what does that mean?
+
+What is really going on here is R first evaluates whether 3 is equal to 5 (`3 == 5`), and then returns the "not" (`!`) of that. A better version of the same thing would be:
+
+```{r}
+!(3 == 5)
+```
 
 ## Order of operations
 
