fixed typo in hw1

--- a/hw1-programming-basics.Rmd
+++ b/hw1-programming-basics.Rmd
@@ -153,7 +153,7 @@ turtle_init()
 turtle_move(distance = 10, direction = "forward")
 turtle_move(distance = 20, direction = "backward")
 turtle_reset()
-turtle_right(angle = 90, direction = "right")
+turtle_turn(angle = 90, direction = "right")
 turtle_move(distance = 10, direction = "forward")
 turtle_move(distance = 20, direction = "backward")
 turtle_reset()
