--- a/P3-functions.Rmd
+++ b/P3-functions.Rmd
@@ -59,15 +59,19 @@ Given a non-negative integer `x`, return the integer value that is closest to it
 
 Given a temperature in Celsius, return the same temperature in Fahrenheit.  So `celsiusToFahrenheit(0)` returns `32`, and `celsiusToFahrenheit(100)` returns `212`.
 
-### 4) `isRightTriangle(x1, y1, x2, y2, x3, y3)`
+### 4) `isPerfectCube(x)`
 
-Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return `TRUE` if the triangle formed by connecting the 3 points is a right triangle, and `FALSE` otherwise.  You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint: [Herod's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula).
+Given an integer value `x`, returns `TRUE` if it is a perfect cube and `FALSE` otherwise. That is, return `TRUE` if there is another integer `y` such that `x = y^3`.  Thus, `isPerfectCube(27)` returns `TRUE`, but `isPerfectCube(16)` returns `FALSE`.
 
-### 5) `triangleArea(x1, y1, x2, y2, x3, y3)`
+### 5) `isTriangular(x)`
+
+A number is triangular if it equals 1+2+3+...+N for some integer N. Given an integer value `x`, return `TRUE` if it is triangular, and `FALSE` otherwise.  Note that this relates to the pool ball problems above.
+
+### 6) `triangleArea(x1, y1, x2, y2, x3, y3)`
 
 Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return the area of the triangle formed by connecting the 3 points.  You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint:  [Herod's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula).
 
-### 6) `dcHour(londonHour)`
+### 7) `dcHour(londonHour)`
 This function takes an integer, the current hour in London, and returns the current hour in Washington DC (which is 5 hours behind London). However, London time is given in 24-hour time (so `londonHour` is between 0 and 23, inclusive), but Washington DC time must be returned in 12-hour time (so the result must be between 1 and 12, inclusive, where "am" and "pm" are ignored). Here are some examples:
 
 <div class="tableMedium">
